--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,10 @@ scale: 1.3;
 }
 .colLeft{
   position: relative;
+  transition: 0.6s;
+}
+.colLeft:hover{
+  scale: 1.1;
 }
 .collectionText {
     position: absolute;
@@ -139,6 +143,7 @@ scale: 1.3;
   font-weight: 500;
   color: #222222;
   position: relative;
+  transition: 0.6s;
 }
 .collectionText h5::before {
     height: 2px;
@@ -160,8 +165,86 @@ scale: 1.3;
 
 /* Collection PART END */
 
-/* HEADER PART START  */
-/* HEADER PART END */
+/* Product PART START  */
+#productPart{
+  padding-bottom: 100px;
+}
+.commonTitle h3{
+  font-size: 35px;
+  font-weight: 500;
+  color: #222222;
+}
+.productA a{
+  font-size: 18px;
+  font-weight: 500;
+  color: #767676;
+  padding-top: 40px;
+  margin-left: 35px;
+  transition: 0.6s;
+  position: relative;
+}
+.productA a:hover{
+  color: #222222;
+}
+.productA a:hover::before{
+   height: 2px;
+    width: 35px;
+    background: #222222;
+    bottom: 0;
+    left: 0;
+    content: "";
+    position: absolute;
+}
+.pImg{
+  transition: 0.6s;
+  position: relative;
+}
+.pImg:hover{
+  scale: 1.1;
+}
+.pText h6{
+  font-size: 14px;
+  font-weight: 500;
+  color: #767676;
+  padding-top: 10px;
+}
+.pText h4{
+  font-size: 16px;
+  font-weight: 400;
+  color: #222222;
+  padding: 10px 0;
+}
+.pText h5{
+font-size: 16px;
+  font-weight: 400;
+  color: #222222;
+}
+.heart{
+  position: absolute;
+  bottom: 35px;
+  right: 0;
+  color: #767676;
+}
+.pEnd{
+  padding: 50px 0;
+}
+.pEnd h5{
+  font-size: 14px;
+  font-weight: 500;
+  color: #222222;
+  position: relative;
+}
+.pEnd h5::after {
+    height: 2px;
+    width: 85px;
+    background: #222222;
+    bottom: -7px;
+    left: 40px;
+    content: "";
+    position: absolute;
+}
+
+/* Product PART END */
 
 /* HEADER PART START  */
 /* HEADER PART END */
